fixed search issues (.env file missing from shift), and mealEditor meal updating issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,3 @@
-/* html, body {
-  all: unset;
-  display: block;
-  overflow: hidden;
-  padding: 0;
-  margin: 0;
-  height: 100vh;
-  width: 100vw;
-} */
-
 html, body, #root {
   all: unset;
   display: block;
@@ -16,6 +6,49 @@ html, body, #root {
   margin: 0;
   height: 100vh;
   width: 100vw;
+}
+
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style-type: circle;
+  margin: 0;
+  padding: 0;
+}
+
+#firebaseui_container {
+  margin-top: calc(100% /2);
+}
+
+a, a.active, a:active, a:focus {
+  outline: unset;
+  text-decoration: none;
+  color: black;
+}
+
+button, button.active, button:active, button:focus {
+  outline: unset;
+  text-decoration: none;
+  color: black;
+}
+
+textarea {       
+  resize: none;
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
 
 input, select { 
